fix(jsonMenuNested): copy all broken
https://github.com/ems-project/EMSCommonBundle/pull/442/files

--- a/EMS/core-bundle/src/Resources/views/revision/json/json_menu_nested.html.twig
+++ b/EMS/core-bundle/src/Resources/views/revision/json/json_menu_nested.html.twig
@@ -206,7 +206,7 @@
                         <button class="btn-json-menu-nested-paste"
                                 data-item-id="{{ item.id }}"
                                 data-node-id="{{ node.id }}"
-                                {%- if 'root' == position %}data-allow="root"{% endif -%}>
+                                {%- if 'root' == position %}data-allow="_root"{% endif -%}>
                             <span class="fa fa-paste"></span>&nbsp;{{ 'field_type.json_menu_editor.paste'|trans }}
                         </button>
                     </li>
