fix(core): ajax modal pick file from server
Conflict because using the same ajax modal div.
Still not perfect, the pick file from server should be a true browser modal.

--- a/EMS/core-bundle/src/Resources/views/base.html.twig
+++ b/EMS/core-bundle/src/Resources/views/base.html.twig
@@ -341,6 +341,7 @@
 </div>
 <!-- ./wrapper -->
     {% embed '@EMSCore/core/modal.html.twig' with {'id': 'ajax-modal'} %}{% endembed %}
+    {% embed '@EMSCore/core/modal.html.twig' with {'id': 'pick-file-server-modal'} %}{% endembed %}
 
     <!-- centralized webpack javascript -->
     {% block frontend_application_js %}{#ok#}
