--- a/EMS/core-bundle/src/Resources/views/admin-form/form.html.twig
+++ b/EMS/core-bundle/src/Resources/views/admin-form/form.html.twig
@@ -15,6 +15,12 @@
                         {{ form_row(form.name) }}
                         <div class="clearfix"></div>
                         {{ form_row(form.label) }}
+                        {%  if form.fieldType is defined %}
+                            <div class="clearfix"></div>
+                            <div class="col-md-12">
+                                {{ form_row(form.fieldType) }}
+                            </div>
+                        {% endif %}
                     </div>
                 </div>
                 <div class="box-footer">
