--- a/EMS/core-bundle/src/Resources/views/elements/post-button.html.twig
+++ b/EMS/core-bundle/src/Resources/views/elements/post-button.html.twig
@@ -5,15 +5,11 @@
 	'name': (name is defined  ? name|json_encode : false),
 	'value': (value is defined  ? value|json_encode : false),
 }|filter(v => v != false) -%}
-{% if message is defined %}
+{% if message is defined and message != null %}
 	<div class="btn-group{% if group_class is defined %} {{ group_class }}{% endif %}">
 	  <button type="button" class="btn {% if class is defined %}{{ class }}{% else %}btn-sm{% endif %} btn-{{ btnType|default('primary') }} dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			{% if icon is defined %}
-				{% if icon|slice(0,10) == 'glyphicon-'  %}
-					<span class="glyphicon {{ icon }}"></span>&nbsp;
-				{% else %}
-					<span class="fa fa-{{ icon }}"></span>&nbsp;
-				{% endif  %}
+				<span class="{{ icon starts with 'glyphicon-' ? "glyphicon #{icon}" : "fa fa-#{icon}" }}"></span>&nbsp;
 			{% endif %}
 			{% if label is defined %}
 				{{ label|trans({'%label%' : itemLabel|default('%label%')}) }}
@@ -35,14 +31,8 @@
 		data-post-settings="{{ settings|json_encode|escape('html_attr') }}"
 		href="{{ url }}">
 		{% if icon is defined %}
-			{% if icon|slice(0,9) == 'glyphicon'  %}
-				<span class="glyphicon {{ icon }}"></span>&nbsp;
-			{% else %}
-				<span class="fa fa-{{ icon }}"></span>&nbsp;
-			{% endif  %}
+			<span class="{{ icon starts with 'glyphicon-' ? "glyphicon #{icon}" : "fa fa-#{icon}" }}"></span>&nbsp;
 		{% endif %}
-		{% if label is defined %}
-			{{ label }}
-		{% endif %}
+		{% if label is defined %}{{ label|trans }}{% endif %}
 	</a>
 {% endif %}
