--- a/EMS/core-bundle/src/Resources/views/dashboard/columns.html.twig
+++ b/EMS/core-bundle/src/Resources/views/dashboard/columns.html.twig
@@ -5,10 +5,7 @@
     <i class="{{ [line.data.type, 'icon']|join('.')|trans }}"></i>&nbsp;&nbsp;{{ [line.data.type, 'label']|join('.')|trans }}
 {% endblock type %}
 
-{% block landing_page %}
-    <i class="{% if line.data.landingPage %}fa fa-dot-circle-o{% else %}fa fa-circle-o{% endif %}"></i>
-{% endblock landing_page %}
-
-{% block quick_search %}
-    <i class="{% if line.data.quickSearch %}fa fa-dot-circle-o{% else %}fa fa-circle-o{% endif %}"></i>
-{% endblock quick_search %}
+{% block definition %}
+    {% trans_default_domain 'EMSCoreBundle' %}
+    {% if line.data.definition %}{{ "dashboard.definition.#{line.data.definition}"|trans }}{% endif %}
+{% endblock definition %}
