--- a/EMS/core-bundle/src/Resources/views/user/profile/edit.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/profile/edit.html.twig
@@ -28,11 +28,7 @@
                     {{ form_row(form.locale) }}
                     {{ form_row(form.localePreferred) }}
 
-                    {% if form.wysiwygProfile is defined %}
-                        {% include "@EMSCore/user/wysiwygOptions.html.twig" with {
-                            form: form
-                        } %}
-                    {% endif %}
+                    {{ form_row(form.wysiwygProfile) }}
                 </div>
                 <div class="box-footer">
                     {{ form_row(form._token) }}
