--- a/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
+++ b/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
@@ -51,7 +51,7 @@
 <div class="panel panel-default">
 	<div class="panel-heading">
 		<h3 class="panel-title">
-			<i class="{% if dataField.fieldType.displayOptions.icon is defined %}{{ dataField.fieldType.displayOptions.icon }}{% else %}fa fa-file-o{% endif %}"></i> 				
+			<i class="{% if dataField.fieldType.displayOptions.icon is defined %}{{ dataField.fieldType.displayOptions.icon }}{% else %}fa fa-file-o{% endif %}"></i>
 				{% if dataField.fieldType.displayOptions.label is defined %}
 					{{ dataField.fieldType.displayOptions.label }}
 				{% else %}
@@ -275,7 +275,7 @@
 						<div class="panel-heading">
 							<h3 class="panel-title">
 								{% if dataField.fieldType.displayOptions.icon is defined %}
-									<i class="{{ dataField.fieldType.displayOptions.icon }}"></i> 
+									<i class="{{ dataField.fieldType.displayOptions.icon }}"></i>
 								{% endif %}
 								{% if dataField.fieldType.displayOptions.singularLabel is defined %}
 									{{ dataField.fieldType.displayOptions.singularLabel }}
@@ -358,7 +358,7 @@
 			<div class="panel-heading">
 				<h3 class="panel-title">
 					{% if dataField.fieldType.displayOptions.icon is defined %}
-						<i class="{{ dataField.fieldType.displayOptions.icon }}"></i> 
+						<i class="{{ dataField.fieldType.displayOptions.icon }}"></i>
 					{% endif %}
 					{% if dataField.fieldType.displayOptions.label is defined %}
 						{{ dataField.fieldType.displayOptions.label }}
@@ -554,7 +554,7 @@
 			<ul>
             	{{ diff_choice(dataField.rawData, labels, choices, compare, dataField.fieldType.name, compareRawData) }}
 			</ul>
-		
+
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
@@ -1140,8 +1140,8 @@
 		{% if attribute(dataField.rawData, dataField.fieldType.mappingOptions.toDateMachineName) is defined %}
 			{% set dateTo = attribute(dataField.rawData, dataField.fieldType.mappingOptions.toDateMachineName) %}
 		{% endif %}
-		
-		
+
+
 		<dd>
 			<ul>
 				{% set child = compareRawData %}
@@ -1159,13 +1159,13 @@
 					<li>
 						<b>From </b>
                         {{ diff_date(dateFrom, compare, dataField.fieldType.mappingOptions.fromDateMachineName, child, dataField.fieldType.displayOptions.locale.format|convertJavascriptDateRangeFormat, false, constant('\\DateTime::ISO8601')) }}
-					</li>	
-				{% endif %}		
+					</li>
+				{% endif %}
 				{% if dateTo %}
 					<li>
 						<b>To </b>
                         {{ diff_date(dateTo, compare, dataField.fieldType.mappingOptions.toDateMachineName, child, dataField.fieldType.displayOptions.locale.format|convertJavascriptDateRangeFormat, false, constant('\\DateTime::ISO8601')) }}
-					</li>	
+					</li>
 				{% endif %}
 				{% if dateFrom and dateTo %}
 					<li>
@@ -1245,4 +1245,8 @@
 		</dd>
 	</dl>
 	{{ _self.messages(dataField) }}
+{% endblock %}
+
+{% block EMS_CoreBundle_Form_DataField_FormFieldType %}
+    <pre class="ems-code-editor" data-language="ace/mode/json" data-them="ace/theme/chrome">{{ dataField.rawData|default([])|json_encode(constant('JSON_PRETTY_PRINT'))|internal_links }}</pre>
 {% endblock %}
