--- a/EMS/core-bundle/src/Resources/views/user/user.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/user.html.twig
@@ -8,8 +8,7 @@
 
 {% block breadcrumb %}
     <ol class="breadcrumb">
-        <li class="active"><a href="{{ path('emsco_user_index') }}">{{ block('folderTitle') }}</a></li>
-        {% block breadcrumbItems %}{% endblock breadcrumbItems %}
+        <li class="active">{{ block('title') }}</li>
     </ol>
 {% endblock %}
 
