feat(dashboard): add logic for updating browser selection

--- a/EMS/core-bundle/src/Resources/views/dashboard/browser/dashboard-browser-modal.html.twig
+++ b/EMS/core-bundle/src/Resources/views/dashboard/browser/dashboard-browser-modal.html.twig
@@ -14,9 +14,11 @@
 {% endblock %}
 
 {% block main %}
-    {%- if dashboard.option('body') is not null -%}
-        {{- include(template_from_string(dashboard.option('body'), "Body template for Dashboard " ~ dashboard.name)) -}}
-    {%- endif -%}
+    <div id="dashboard-browser" data-type="{{ dashboard.definition }}">
+        {%- if dashboard.option('body') is not null -%}
+            {{- include(template_from_string(dashboard.option('body'), "Body template for Dashboard " ~ dashboard.name)) -}}
+        {%- endif -%}
+    </div>
 {% endblock %}
 
 {% block javascripts %}
